samples/_failures_safe/1761505258_4c60c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96fcae01.c: In function ‘main’:
./samples/SAFE/__tmp_96fcae01.c:145:5: error: expected expression at end of input
  145 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_96fcae01.c:145:5: error: expected declaration or statement at end of input
